[gd_scene load_steps=4 format=3 uid="uid://b83k5lu54lm53"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_02hua"]
[ext_resource type="FontFile" uid="uid://crlrhoknau8f2" path="res://fonts/GearCrank-vZE4.ttf" id="2_cwmxu"]

[sub_resource type="GDScript" id="GDScript_yuhal"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass
"

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_02hua")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(0, 70)
transform = Transform2D(1, 0, 0, 1, 0, 70)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -235.0
offset_right = 235.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_cwmxu")
theme_override_font_sizes/font_size = 100
text = "built"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_cwmxu")
theme_override_font_sizes/font_size = 60
text = "to"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_cwmxu")
theme_override_font_sizes/font_size = 100
text = "Scale"
horizontal_alignment = 1

[node name="StartBtn" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start"
script = SubResource("GDScript_yuhal")

[node name="OptionsBtn" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Options
"

[node name="CreditsBtn" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Credits"

[connection signal="pressed" from="CanvasLayer/GridContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/CreditsBtn" to="." method="_on_credits_btn_pressed"]
